// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<div
  className="source-viewer-code"
>
  <table
    className="source-table"
  >
    <tbody>
      <Line
        branchLike={
          Object {
            "analysisDate": "2018-01-01",
            "excludedFromPurge": true,
            "isMain": false,
            "name": "branch-6.7",
          }
        }
        displayCoverage={true}
        displayDuplications={false}
        displayIssues={true}
        displaySCM={true}
        duplications={Array []}
        duplicationsCount={0}
        firstLineNumber={16}
        highlighted={false}
        issueLocations={Array []}
        issues={Array []}
        key="16"
        last={false}
        line={
          Object {
            "code": "<span class=\\"k\\">import</span> java.util.<span class=\\"sym-9 sym\\">ArrayList</span>;",
            "coverageStatus": "covered",
            "coveredConditions": 2,
            "duplicated": false,
            "isNew": true,
            "line": 16,
            "scmAuthor": "simon.brandhof@sonarsource.com",
            "scmDate": "2018-12-11T10:48:39+0100",
            "scmRevision": "80f564becc0c0a1c9abaa006eca83a4fd278c3f0",
          }
        }
        loadDuplications={[MockFunction]}
        onIssueChange={[MockFunction]}
        onIssuePopupToggle={[MockFunction]}
        onIssueSelect={[MockFunction]}
        onIssueUnselect={[MockFunction]}
        onIssuesClose={[MockFunction]}
        onIssuesOpen={[MockFunction]}
        onLocationSelect={[MockFunction]}
        onSymbolClick={[MockFunction]}
        openIssues={false}
        renderDuplicationPopup={[MockFunction]}
        scrollToUncoveredLine={false}
        secondaryIssueLocations={Array []}
      />
      <Line
        branchLike={
          Object {
            "analysisDate": "2018-01-01",
            "excludedFromPurge": true,
            "isMain": false,
            "name": "branch-6.7",
          }
        }
        displayCoverage={true}
        displayDuplications={false}
        displayIssues={true}
        displaySCM={true}
        duplications={Array []}
        duplicationsCount={0}
        firstLineNumber={16}
        highlighted={false}
        issueLocations={Array []}
        issues={Array []}
        key="16"
        last={false}
        line={
          Object {
            "code": "<span class=\\"k\\">import</span> java.util.<span class=\\"sym-9 sym\\">ArrayList</span>;",
            "coverageStatus": "covered",
            "coveredConditions": 2,
            "duplicated": false,
            "isNew": true,
            "line": 16,
            "scmAuthor": "simon.brandhof@sonarsource.com",
            "scmDate": "2018-12-11T10:48:39+0100",
            "scmRevision": "80f564becc0c0a1c9abaa006eca83a4fd278c3f0",
          }
        }
        loadDuplications={[MockFunction]}
        onIssueChange={[MockFunction]}
        onIssuePopupToggle={[MockFunction]}
        onIssueSelect={[MockFunction]}
        onIssueUnselect={[MockFunction]}
        onIssuesClose={[MockFunction]}
        onIssuesOpen={[MockFunction]}
        onLocationSelect={[MockFunction]}
        onSymbolClick={[MockFunction]}
        openIssues={false}
        previousLine={
          Object {
            "code": "<span class=\\"k\\">import</span> java.util.<span class=\\"sym-9 sym\\">ArrayList</span>;",
            "coverageStatus": "covered",
            "coveredConditions": 2,
            "duplicated": false,
            "isNew": true,
            "line": 16,
            "scmAuthor": "simon.brandhof@sonarsource.com",
            "scmDate": "2018-12-11T10:48:39+0100",
            "scmRevision": "80f564becc0c0a1c9abaa006eca83a4fd278c3f0",
          }
        }
        renderDuplicationPopup={[MockFunction]}
        scrollToUncoveredLine={false}
        secondaryIssueLocations={Array []}
      />
      <Line
        branchLike={
          Object {
            "analysisDate": "2018-01-01",
            "excludedFromPurge": true,
            "isMain": false,
            "name": "branch-6.7",
          }
        }
        displayCoverage={true}
        displayDuplications={false}
        displayIssues={true}
        displaySCM={true}
        duplications={Array []}
        duplicationsCount={0}
        firstLineNumber={16}
        highlighted={false}
        issueLocations={Array []}
        issues={Array []}
        key="16"
        last={true}
        line={
          Object {
            "code": "<span class=\\"k\\">import</span> java.util.<span class=\\"sym-9 sym\\">ArrayList</span>;",
            "coverageStatus": "covered",
            "coveredConditions": 2,
            "duplicated": false,
            "isNew": true,
            "line": 16,
            "scmAuthor": "simon.brandhof@sonarsource.com",
            "scmDate": "2018-12-11T10:48:39+0100",
            "scmRevision": "80f564becc0c0a1c9abaa006eca83a4fd278c3f0",
          }
        }
        loadDuplications={[MockFunction]}
        onIssueChange={[MockFunction]}
        onIssuePopupToggle={[MockFunction]}
        onIssueSelect={[MockFunction]}
        onIssueUnselect={[MockFunction]}
        onIssuesClose={[MockFunction]}
        onIssuesOpen={[MockFunction]}
        onLocationSelect={[MockFunction]}
        onSymbolClick={[MockFunction]}
        openIssues={false}
        previousLine={
          Object {
            "code": "<span class=\\"k\\">import</span> java.util.<span class=\\"sym-9 sym\\">ArrayList</span>;",
            "coverageStatus": "covered",
            "coveredConditions": 2,
            "duplicated": false,
            "isNew": true,
            "line": 16,
            "scmAuthor": "simon.brandhof@sonarsource.com",
            "scmDate": "2018-12-11T10:48:39+0100",
            "scmRevision": "80f564becc0c0a1c9abaa006eca83a4fd278c3f0",
          }
        }
        renderDuplicationPopup={[MockFunction]}
        scrollToUncoveredLine={false}
        secondaryIssueLocations={Array []}
      />
    </tbody>
  </table>
</div>
`;

exports[`should render correctly: has file level issues 1`] = `
<div
  className="source-viewer-code"
>
  <table
    className="source-table"
  >
    <tbody>
      <Line
        branchLike={
          Object {
            "analysisDate": "2018-01-01",
            "excludedFromPurge": true,
            "isMain": false,
            "name": "branch-6.7",
          }
        }
        displayCoverage={true}
        displayDuplications={false}
        displayIssues={true}
        displaySCM={true}
        duplications={Array []}
        duplicationsCount={0}
        firstLineNumber={16}
        highlighted={false}
        issueLocations={Array []}
        issues={Array []}
        key="0"
        last={false}
        line={
          Object {
            "code": "",
            "duplicated": false,
            "isNew": false,
            "line": 0,
          }
        }
        loadDuplications={[MockFunction]}
        onIssueChange={[MockFunction]}
        onIssuePopupToggle={[MockFunction]}
        onIssueSelect={[MockFunction]}
        onIssueUnselect={[MockFunction]}
        onIssuesClose={[MockFunction]}
        onIssuesOpen={[MockFunction]}
        onLocationSelect={[MockFunction]}
        onSymbolClick={[MockFunction]}
        openIssues={false}
        renderDuplicationPopup={[MockFunction]}
        scrollToUncoveredLine={false}
        secondaryIssueLocations={Array []}
      />
      <Line
        branchLike={
          Object {
            "analysisDate": "2018-01-01",
            "excludedFromPurge": true,
            "isMain": false,
            "name": "branch-6.7",
          }
        }
        displayCoverage={true}
        displayDuplications={false}
        displayIssues={true}
        displaySCM={true}
        duplications={Array []}
        duplicationsCount={0}
        firstLineNumber={16}
        highlighted={false}
        issueLocations={Array []}
        issues={Array []}
        key="16"
        last={false}
        line={
          Object {
            "code": "<span class=\\"k\\">import</span> java.util.<span class=\\"sym-9 sym\\">ArrayList</span>;",
            "coverageStatus": "covered",
            "coveredConditions": 2,
            "duplicated": false,
            "isNew": true,
            "line": 16,
            "scmAuthor": "simon.brandhof@sonarsource.com",
            "scmDate": "2018-12-11T10:48:39+0100",
            "scmRevision": "80f564becc0c0a1c9abaa006eca83a4fd278c3f0",
          }
        }
        loadDuplications={[MockFunction]}
        onIssueChange={[MockFunction]}
        onIssuePopupToggle={[MockFunction]}
        onIssueSelect={[MockFunction]}
        onIssueUnselect={[MockFunction]}
        onIssuesClose={[MockFunction]}
        onIssuesOpen={[MockFunction]}
        onLocationSelect={[MockFunction]}
        onSymbolClick={[MockFunction]}
        openIssues={false}
        renderDuplicationPopup={[MockFunction]}
        scrollToUncoveredLine={false}
        secondaryIssueLocations={Array []}
      />
      <Line
        branchLike={
          Object {
            "analysisDate": "2018-01-01",
            "excludedFromPurge": true,
            "isMain": false,
            "name": "branch-6.7",
          }
        }
        displayCoverage={true}
        displayDuplications={false}
        displayIssues={true}
        displaySCM={true}
        duplications={Array []}
        duplicationsCount={0}
        firstLineNumber={16}
        highlighted={false}
        issueLocations={Array []}
        issues={Array []}
        key="16"
        last={false}
        line={
          Object {
            "code": "<span class=\\"k\\">import</span> java.util.<span class=\\"sym-9 sym\\">ArrayList</span>;",
            "coverageStatus": "covered",
            "coveredConditions": 2,
            "duplicated": false,
            "isNew": true,
            "line": 16,
            "scmAuthor": "simon.brandhof@sonarsource.com",
            "scmDate": "2018-12-11T10:48:39+0100",
            "scmRevision": "80f564becc0c0a1c9abaa006eca83a4fd278c3f0",
          }
        }
        loadDuplications={[MockFunction]}
        onIssueChange={[MockFunction]}
        onIssuePopupToggle={[MockFunction]}
        onIssueSelect={[MockFunction]}
        onIssueUnselect={[MockFunction]}
        onIssuesClose={[MockFunction]}
        onIssuesOpen={[MockFunction]}
        onLocationSelect={[MockFunction]}
        onSymbolClick={[MockFunction]}
        openIssues={false}
        previousLine={
          Object {
            "code": "<span class=\\"k\\">import</span> java.util.<span class=\\"sym-9 sym\\">ArrayList</span>;",
            "coverageStatus": "covered",
            "coveredConditions": 2,
            "duplicated": false,
            "isNew": true,
            "line": 16,
            "scmAuthor": "simon.brandhof@sonarsource.com",
            "scmDate": "2018-12-11T10:48:39+0100",
            "scmRevision": "80f564becc0c0a1c9abaa006eca83a4fd278c3f0",
          }
        }
        renderDuplicationPopup={[MockFunction]}
        scrollToUncoveredLine={false}
        secondaryIssueLocations={Array []}
      />
      <Line
        branchLike={
          Object {
            "analysisDate": "2018-01-01",
            "excludedFromPurge": true,
            "isMain": false,
            "name": "branch-6.7",
          }
        }
        displayCoverage={true}
        displayDuplications={false}
        displayIssues={true}
        displaySCM={true}
        duplications={Array []}
        duplicationsCount={0}
        firstLineNumber={16}
        highlighted={false}
        issueLocations={Array []}
        issues={Array []}
        key="16"
        last={true}
        line={
          Object {
            "code": "<span class=\\"k\\">import</span> java.util.<span class=\\"sym-9 sym\\">ArrayList</span>;",
            "coverageStatus": "covered",
            "coveredConditions": 2,
            "duplicated": false,
            "isNew": true,
            "line": 16,
            "scmAuthor": "simon.brandhof@sonarsource.com",
            "scmDate": "2018-12-11T10:48:39+0100",
            "scmRevision": "80f564becc0c0a1c9abaa006eca83a4fd278c3f0",
          }
        }
        loadDuplications={[MockFunction]}
        onIssueChange={[MockFunction]}
        onIssuePopupToggle={[MockFunction]}
        onIssueSelect={[MockFunction]}
        onIssueUnselect={[MockFunction]}
        onIssuesClose={[MockFunction]}
        onIssuesOpen={[MockFunction]}
        onLocationSelect={[MockFunction]}
        onSymbolClick={[MockFunction]}
        openIssues={false}
        previousLine={
          Object {
            "code": "<span class=\\"k\\">import</span> java.util.<span class=\\"sym-9 sym\\">ArrayList</span>;",
            "coverageStatus": "covered",
            "coveredConditions": 2,
            "duplicated": false,
            "isNew": true,
            "line": 16,
            "scmAuthor": "simon.brandhof@sonarsource.com",
            "scmDate": "2018-12-11T10:48:39+0100",
            "scmRevision": "80f564becc0c0a1c9abaa006eca83a4fd278c3f0",
          }
        }
        renderDuplicationPopup={[MockFunction]}
        scrollToUncoveredLine={false}
        secondaryIssueLocations={Array []}
      />
    </tbody>
  </table>
</div>
`;

exports[`should render correctly: has more sources 1`] = `
<div
  className="source-viewer-code"
>
  <div
    className="source-viewer-more-code"
  >
    <Button
      className="js-component-viewer-source-before"
      onClick={[MockFunction]}
    >
      source_viewer.load_more_code
    </Button>
  </div>
  <table
    className="source-table"
  >
    <tbody>
      <Line
        branchLike={
          Object {
            "analysisDate": "2018-01-01",
            "excludedFromPurge": true,
            "isMain": false,
            "name": "branch-6.7",
          }
        }
        displayCoverage={true}
        displayDuplications={false}
        displayIssues={true}
        displaySCM={true}
        duplications={Array []}
        duplicationsCount={0}
        firstLineNumber={16}
        highlighted={false}
        issueLocations={Array []}
        issues={Array []}
        key="16"
        last={false}
        line={
          Object {
            "code": "<span class=\\"k\\">import</span> java.util.<span class=\\"sym-9 sym\\">ArrayList</span>;",
            "coverageStatus": "covered",
            "coveredConditions": 2,
            "duplicated": false,
            "isNew": true,
            "line": 16,
            "scmAuthor": "simon.brandhof@sonarsource.com",
            "scmDate": "2018-12-11T10:48:39+0100",
            "scmRevision": "80f564becc0c0a1c9abaa006eca83a4fd278c3f0",
          }
        }
        loadDuplications={[MockFunction]}
        onIssueChange={[MockFunction]}
        onIssuePopupToggle={[MockFunction]}
        onIssueSelect={[MockFunction]}
        onIssueUnselect={[MockFunction]}
        onIssuesClose={[MockFunction]}
        onIssuesOpen={[MockFunction]}
        onLocationSelect={[MockFunction]}
        onSymbolClick={[MockFunction]}
        openIssues={false}
        renderDuplicationPopup={[MockFunction]}
        scrollToUncoveredLine={false}
        secondaryIssueLocations={Array []}
      />
      <Line
        branchLike={
          Object {
            "analysisDate": "2018-01-01",
            "excludedFromPurge": true,
            "isMain": false,
            "name": "branch-6.7",
          }
        }
        displayCoverage={true}
        displayDuplications={false}
        displayIssues={true}
        displaySCM={true}
        duplications={Array []}
        duplicationsCount={0}
        firstLineNumber={16}
        highlighted={false}
        issueLocations={Array []}
        issues={Array []}
        key="16"
        last={false}
        line={
          Object {
            "code": "<span class=\\"k\\">import</span> java.util.<span class=\\"sym-9 sym\\">ArrayList</span>;",
            "coverageStatus": "covered",
            "coveredConditions": 2,
            "duplicated": false,
            "isNew": true,
            "line": 16,
            "scmAuthor": "simon.brandhof@sonarsource.com",
            "scmDate": "2018-12-11T10:48:39+0100",
            "scmRevision": "80f564becc0c0a1c9abaa006eca83a4fd278c3f0",
          }
        }
        loadDuplications={[MockFunction]}
        onIssueChange={[MockFunction]}
        onIssuePopupToggle={[MockFunction]}
        onIssueSelect={[MockFunction]}
        onIssueUnselect={[MockFunction]}
        onIssuesClose={[MockFunction]}
        onIssuesOpen={[MockFunction]}
        onLocationSelect={[MockFunction]}
        onSymbolClick={[MockFunction]}
        openIssues={false}
        previousLine={
          Object {
            "code": "<span class=\\"k\\">import</span> java.util.<span class=\\"sym-9 sym\\">ArrayList</span>;",
            "coverageStatus": "covered",
            "coveredConditions": 2,
            "duplicated": false,
            "isNew": true,
            "line": 16,
            "scmAuthor": "simon.brandhof@sonarsource.com",
            "scmDate": "2018-12-11T10:48:39+0100",
            "scmRevision": "80f564becc0c0a1c9abaa006eca83a4fd278c3f0",
          }
        }
        renderDuplicationPopup={[MockFunction]}
        scrollToUncoveredLine={false}
        secondaryIssueLocations={Array []}
      />
      <Line
        branchLike={
          Object {
            "analysisDate": "2018-01-01",
            "excludedFromPurge": true,
            "isMain": false,
            "name": "branch-6.7",
          }
        }
        displayCoverage={true}
        displayDuplications={false}
        displayIssues={true}
        displaySCM={true}
        duplications={Array []}
        duplicationsCount={0}
        firstLineNumber={16}
        highlighted={false}
        issueLocations={Array []}
        issues={Array []}
        key="16"
        last={false}
        line={
          Object {
            "code": "<span class=\\"k\\">import</span> java.util.<span class=\\"sym-9 sym\\">ArrayList</span>;",
            "coverageStatus": "covered",
            "coveredConditions": 2,
            "duplicated": false,
            "isNew": true,
            "line": 16,
            "scmAuthor": "simon.brandhof@sonarsource.com",
            "scmDate": "2018-12-11T10:48:39+0100",
            "scmRevision": "80f564becc0c0a1c9abaa006eca83a4fd278c3f0",
          }
        }
        loadDuplications={[MockFunction]}
        onIssueChange={[MockFunction]}
        onIssuePopupToggle={[MockFunction]}
        onIssueSelect={[MockFunction]}
        onIssueUnselect={[MockFunction]}
        onIssuesClose={[MockFunction]}
        onIssuesOpen={[MockFunction]}
        onLocationSelect={[MockFunction]}
        onSymbolClick={[MockFunction]}
        openIssues={false}
        previousLine={
          Object {
            "code": "<span class=\\"k\\">import</span> java.util.<span class=\\"sym-9 sym\\">ArrayList</span>;",
            "coverageStatus": "covered",
            "coveredConditions": 2,
            "duplicated": false,
            "isNew": true,
            "line": 16,
            "scmAuthor": "simon.brandhof@sonarsource.com",
            "scmDate": "2018-12-11T10:48:39+0100",
            "scmRevision": "80f564becc0c0a1c9abaa006eca83a4fd278c3f0",
          }
        }
        renderDuplicationPopup={[MockFunction]}
        scrollToUncoveredLine={false}
        secondaryIssueLocations={Array []}
      />
    </tbody>
  </table>
  <div
    className="source-viewer-more-code"
  >
    <Button
      className="js-component-viewer-source-after"
      onClick={[MockFunction]}
    >
      source_viewer.load_more_code
    </Button>
  </div>
</div>
`;

exports[`should render correctly: only file issues 1`] = `
<div
  className="source-viewer-code"
>
  <table
    className="source-table"
  >
    <tbody>
      <Line
        branchLike={
          Object {
            "analysisDate": "2018-01-01",
            "excludedFromPurge": true,
            "isMain": false,
            "name": "branch-6.7",
          }
        }
        displayCoverage={false}
        displayDuplications={false}
        displayIssues={true}
        displaySCM={false}
        duplications={Array []}
        duplicationsCount={0}
        firstLineNumber={0}
        highlighted={false}
        issueLocations={Array []}
        issues={Array []}
        key="0"
        last={true}
        line={
          Object {
            "code": "",
            "duplicated": false,
            "isNew": false,
            "line": 0,
          }
        }
        loadDuplications={[MockFunction]}
        onIssueChange={[MockFunction]}
        onIssuePopupToggle={[MockFunction]}
        onIssueSelect={[MockFunction]}
        onIssueUnselect={[MockFunction]}
        onIssuesClose={[MockFunction]}
        onIssuesOpen={[MockFunction]}
        onLocationSelect={[MockFunction]}
        onSymbolClick={[MockFunction]}
        openIssues={false}
        renderDuplicationPopup={[MockFunction]}
        scrollToUncoveredLine={false}
        secondaryIssueLocations={Array []}
      />
    </tbody>
  </table>
</div>
`;
